logs/lisa-plugin-programmetv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lisa'...
Listing './lib/python3.5/site-packages/lisa/plugins'...
Listing './lib/python3.5/site-packages/lisa/plugins/ProgrammeTV'...
Listing './lib/python3.5/site-packages/lisa/plugins/ProgrammeTV/lang'...
Listing './lib/python3.5/site-packages/lisa/plugins/ProgrammeTV/lang/fr'...
Listing './lib/python3.5/site-packages/lisa/plugins/ProgrammeTV/lang/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/lisa/plugins/ProgrammeTV/modules'...
Compiling './lib/python3.5/site-packages/lisa/plugins/ProgrammeTV/modules/programmetv.py'...
***   File "./lib/python3.5/site-packages/lisa/plugins/ProgrammeTV/modules/programmetv.py", line 45
    print self._("Downloading the tv program")
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lisa/plugins/ProgrammeTV/web'...
Listing './lib/python3.5/site-packages/lisa_plugin_ProgrammeTV-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
